MMA-5199: Java11 endringer